1.3.0 /
[Alexandr Topilski]
- Ui bug fixes
- Validate input
- [Redis] LPUSH UI handling
- [Redis] SADD UI handling
- [Redis] ZADD UI handling
- [Redis] HMSET UI handling

1.2.0 / December 3, 2016
[Alexandr Topilski]
- Help command
- Common api for databases
- Update libssh2 sources to version 1.8.0
- [Redis] Load Databases - Amazon Elastic Cache - Redis #65
- [Redis] TTL loop
- [Memcached] TTL loop
- [SSDB] expire, ttl commands
- [SSDB] TTL loop
- [UnQLite] Update sources to version 1.1.7

1.1.1 / November 23, 2016
[Alexandr Topilski]
- [RocksDB] Update sources to version 4.13.0
- [LevelDB] Update sources to version 1.19
- [LMDB] Read only db flag
- [UnQLite] Read only db flag
- Fix rpm package

1.1.0 / November 19, 2016
[Alexandr Topilski]
- UpscaleDB support (Local DB)
- Quit function
- New Connection setting dialog
- Fix spaces in db path

1.0.0 / October 21, 2016
[Alexandr Topilski]
- Sort filter keys
- Bug fixes

0.7.4 / October 15, 2016
[Alexandr Topilski]
- Rename command
- Advanced options for execute command
- Watch key
- Edit key menu
- Check commands args

0.7.3 / October 1, 2016
[Alexandr Topilski]
- [LevelDB] Use folder as db path
- [RocksDB] Use folder as db path
- [LMDB] Use folder as db path
- [Redis] Select db from console
- Console key(set/del/ttl) handling

0.7.2 / September 17, 2016
[Alexandr Topilski]
- [Redis] Set ttl context menu
- [Memcached] EXPIRE function

0.7.1 / August 6, 2016
[Alexandr Topilski]
- [Memcached] content database and keys functionality
- [Memcached] content database and keys functionality
- [Memcached] DBKCOUNT function
- Statitstics module
- Long size command fixes
- Ui bug fixes

0.7.0 / Jule 17, 2016
[Alexandr Topilski]
- [Redis] Stable sentinel connection
- [Redis] Stable cluster connection
- Stable create keys dialog

0.6.3 / Jule 9, 2016
[Alexandr Topilski]
- [Redis] Commands update
- [SSDB] Up sources to version 1.9.3
- [SSDB] DBKCOUNT command
- [RocksDB] Up sources to version 4.8.0